--- a/templates/index.html
+++ b/templates/index.html
@@ -738,6 +738,16 @@
 
                         <div class="top-sponsor-item tier-2">
                             <a href="#" target="_blank" class="sponsor-logo-link">
+                                <img src="https://i.imgur.com/KsnG9Iq.png" alt="Logo Error404" class="sponsor-logo">
+                            </a>
+                            <div class="sponsor-info">
+                                <span class="sponsor-name">Error404</span>
+                                <span class="sponsor-amount">350 PLN</span>
+                            </div>
+                        </div>
+
+                        <div class="top-sponsor-item tier-3">
+                            <a href="https://discord.gg/bmGeZbttjy" target="_blank" class="sponsor-logo">
                                 <img src="https://i.imgur.com/fTQ5IMU.png" alt="Logo ADHD" class="sponsor-logo">
                             </a>
                             <div class="sponsor-info">
@@ -746,19 +756,13 @@
                             </div>
                         </div>
 
-                        <div class="top-sponsor-item tier-3">
-                            <a href="https://fantasycoach.web.app/" target="_blank" class="sponsor-logo">
-                                <img src="https://i.imgur.com/024ZnlK.jpeg" alt="Logo Ciągnie po nogach" class="sponsor-logo">
-                            </a>
-                            <div class="sponsor-info">
-                                <span class="sponsor-name">Ciągnie po nogach</span>
-                                <span class="sponsor-amount">180 PLN</span>
-                            </div>
-                        </div>
-
                     </div>
 
                     <div class="sponsor-grid">
+			<div class="sponsor-card">
+                            <span class="sponsor-name">Ciągnie po nogach</span>
+                            <span class="sponsor-amount">180 PLN</span>
+                        </div>
                         <div class="sponsor-card">
                             <span class="sponsor-name">zManian</span>
                             <span class="sponsor-amount">100 PLN</span>
