--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,3 @@
- <!-- lofki dla wiotkiego i marcinka -->
-
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -446,8 +444,8 @@
         }
 
         .collapsible-content.expanded {
-            max-height: 1200px; /* Zwiększone, żeby pomieścić sponsorów */
-            padding-top: 20px;
+            max-height: 1800px; /* Zwiększone, żeby pomieścić sponsorów */
+            padding-top: 30px;
         }
 
         /* ============================================= */
@@ -762,6 +760,10 @@
 			<div class="sponsor-card">
                             <span class="sponsor-name">Ciągnie po nogach</span>
                             <span class="sponsor-amount">180 PLN</span>
+                        </div>
+			<div class="sponsor-card">
+                            <span class="sponsor-name">Nodek</span>
+                            <span class="sponsor-amount">135 PLN</span>
                         </div>
                         <div class="sponsor-card">
                             <span class="sponsor-name">zManian</span>
