--- a/templates/index.html
+++ b/templates/index.html
@@ -690,10 +690,9 @@
     <h3>Aplikacja Fantasy Coach</h3>
     <p>Stwórz swój dream team, wybierz zawodników i walcz o najlepszy wynik!</p>
 
-    <a href="https://fantasycoach.web.app/" target="_blank" class="cta-button">
-        STWÓRZ SWOJE FANTASY
-    </a>
-
+    <a href="https://fantasycoach.web.app/fantasy.html" target="_blank" class="cta-button">
+    ZOBACZ WYNIKI FANTASY
+</a>
     <p style="margin-top: 20px; font-size: 0.9em;">Kliknij przycisk powyżej, aby przejść do aplikacji Fantasy Coach.</p>
 </section>
 
