--- a/templates/index.html
+++ b/templates/index.html
@@ -734,22 +734,22 @@
                         </div>
 
                         <div class="top-sponsor-item tier-2">
-                            <a href="#" target="_blank" class="sponsor-logo-link">
-                                <img src="https://i.imgur.com/KsnG9Iq.png" alt="Logo Error404" class="sponsor-logo">
-                            </a>
-                            <div class="sponsor-info">
-                                <span class="sponsor-name">Error404</span>
-                                <span class="sponsor-amount">350 PLN</span>
-                            </div>
-                        </div>
-
-                        <div class="top-sponsor-item tier-3">
-                            <a href="https://discord.gg/bmGeZbttjy" target="_blank" class="sponsor-logo">
+                            <a href="https://discord.gg/bmGeZbttjy" target="_blank" class="sponsor-logo-link">
                                 <img src="https://i.imgur.com/fTQ5IMU.png" alt="Logo ADHD" class="sponsor-logo">
                             </a>
                             <div class="sponsor-info">
                                 <span class="sponsor-name">ADHD</span>
-                                <span class="sponsor-amount">300 PLN</span>
+                                <span class="sponsor-amount">500 PLN</span>
+                            </div>
+                        </div>
+
+                        <div class="top-sponsor-item tier-3">
+                            <a href="#" target="_blank" class="sponsor-logo">
+                                <img src="https://i.imgur.com/KsnG9Iq.png" alt="Logo Error404" class="sponsor-logo">
+                            </a>
+                            <div class="sponsor-info">
+                                <span class="sponsor-name">ADHD</span>
+                                <span class="sponsor-amount">350 PLN</span>
                             </div>
                         </div>
 
@@ -758,22 +758,26 @@
                     <div class="sponsor-grid">
 			<div class="sponsor-card">
                             <span class="sponsor-name">Ciągnie po nogach</span>
-                            <span class="sponsor-amount">180 PLN</span>
+                            <span class="sponsor-amount">185 PLN</span>
                         </div>
 			<div class="sponsor-card">
-                            <span class="sponsor-name">Nodek</span>
-                            <span class="sponsor-amount">135 PLN</span>
+                            <span class="sponsor-name">NYSA</span>
+                            <span class="sponsor-amount">150 PLN</span>
                         </div>
                         <div class="sponsor-card">
-                            <span class="sponsor-name">zManian</span>
+                            <span class="sponsor-name">Nodek</span>
+                            <span class="sponsor-amount">130 PLN</span>
+                        </div>
+                        <div class="sponsor-card">
+                            <span class="sponsor-name">Najc1k</span>
+                            <span class="sponsor-amount">100 PLN</span>
+                        </div>
+			<div class="sponsor-card">
+                            <span class="sponsor-name">zManianTTV</span>
                             <span class="sponsor-amount">100 PLN</span>
                         </div>
                         <div class="sponsor-card">
                             <span class="sponsor-name">JANOVSKI</span>
-                            <span class="sponsor-amount">80 PLN</span>
-                        </div>
-                        <div class="sponsor-card">
-                            <span class="sponsor-name">Team NYSA</span>
                             <span class="sponsor-amount">80 PLN</span>
                         </div>
                         <div class="sponsor-card">
