--- a/templates/index.html
+++ b/templates/index.html
@@ -1025,7 +1025,7 @@ Restart meczu może nastąpić tylko w przypadku krytycznego błędu serwera (np
 
 VIII. Transmisja
 Oficjalna transmisja z komentarzem odbędzie się na kanale twitch.tv/akerman88. Transmisja będzie posiadała odpowiednie opóźnienie (delay) w celu uniknięcia "stream-snipingu".
-Gracze mogą streamować swoją grę (POV), jednak zaleca się ustawienie własnego opóźnienia transmisji (minimum 5 minut) dla własnego bezpieczeństwa taktycznego. Organizator nie ponosi odpowiedzialności za "stream-sniping" wynikający z braku opóźnienia na prywatnych transmisjach.
+Gracze mogą streamować swoją grę (POV), jednak nakazuje się ustawienie opóźnienia transmisji (minimum 5 minut) dla własnego bezpieczeństwa taktycznego.
 
 IX. Postanowienia Końcowe
 Administracja turnieju (PUBG POLSKA) ma pełne prawo do podejmowania ostatecznych decyzji we wszystkich sprawach spornych.
