--- a/templates/index.html
+++ b/templates/index.html
@@ -748,7 +748,7 @@
                                 <img src="https://i.imgur.com/KsnG9Iq.png" alt="Logo Error404" class="sponsor-logo">
                             </a>
                             <div class="sponsor-info">
-                                <span class="sponsor-name">ADHD</span>
+                                <span class="sponsor-name">Error404</span>
                                 <span class="sponsor-amount">350 PLN</span>
                             </div>
                         </div>
