--- a/templates/turniej-charytatywny.html
+++ b/templates/turniej-charytatywny.html
@@ -190,12 +190,11 @@
     </header>
 
     <nav class="main-navbar">
-        <a href="index.html">Strona Główna</a>
-        <a href="turniej-charytatywny.html" class="active">Turniej Charytatywny 2025</a>
-        <a href="pubg-polska-cup.html">PUBG POLSKA CUP 2025</a>
-        <a href="triumfator-v.html">Triumfator V</a>
+        <a href="https://www.pubgpolska.pl/" class="active">Strona Główna</a>
+        <a href="https://www.pubgpolska.pl/turniej-charytatywny.html">Turniej Charytatywny 2025</a>
+        <a href="https://www.pubgpolska.pl/pubg-polska-cup.html">PUBG POLSKA CUP 2025</a>
+        <a href="https://www.pubgpolska.pl/triumfator-v.html">Triumfator V</a>
     </nav>
-
     <div class="content-padding">
 
         <nav class="internal-navbar">
