--- a/templates/pubg-polska-cup.html
+++ b/templates/pubg-polska-cup.html
@@ -77,16 +77,16 @@
 
 <div class="page-wrapper">
     <header class="main-header">
-        <a href="index.html">
+        <a href="https://www.pubgpolska.pl/">
             <img src="https://i.imgur.com/VhDs7mJ.png" alt="PUBG POLSKA" class="header-logo">
         </a>
     </header>
 
     <nav class="main-navbar">
         <a href="https://www.pubgpolska.pl/" class="active">Strona Główna</a>
-        <a href="https://www.pubgpolska.pl/turniej-charytatywny.html">Turniej Charytatywny 2025</a>
-        <a href="https://www.pubgpolska.pl/pubg-polska-cup.html">PUBG POLSKA CUP 2025</a>
-        <a href="https://www.pubgpolska.pl/triumfator-v.html">Triumfator V</a>
+        <a href="turniej-charytatywny.html">Turniej Charytatywny 2025</a>
+        <a href="pubg-polska-cup.html">PUBG POLSKA CUP 2025</a>
+        <a href="triumfator-v.html">Triumfator V</a>
     </nav>
 
     <div class="content-padding">
