--- a/templates/index.html
+++ b/templates/index.html
@@ -26,15 +26,15 @@
 <body>
 
 <div class="page-wrapper">
-    <header class="main-header" onclick="window.location.href='index.html'">
+    <header class="main-header" onclick="window.location.href='https://www.pubgpolska.pl/'">
         <img src="https://i.imgur.com/VhDs7mJ.png" alt="PUBG POLSKA" class="header-logo">
     </header>
 
     <nav class="main-navbar">
         <a href="https://www.pubgpolska.pl/" class="active">Strona Główna</a>
-        <a href="https://www.pubgpolska.pl/turniej-charytatywny.html">Turniej Charytatywny 2025</a>
-        <a href="https://www.pubgpolska.pl/pubg-polska-cup.html">PUBG POLSKA CUP 2025</a>
-        <a href="https://www.pubgpolska.pl/triumfator-v.html">Triumfator V</a>
+        <a href="turniej-charytatywny.html">Turniej Charytatywny 2025</a>
+        <a href="pubg-polska-cup.html">PUBG POLSKA CUP 2025</a>
+        <a href="triumfator-v.html">Triumfator V</a>
     </nav>
 
     <div class="content-padding">
